--- a/css/button.css
+++ b/css/button.css
@@ -1,12 +1,11 @@
 /* Button */
 
-div.button {
+.button {
   position: relative;
   text-align: center;
-  border: 1px solid red;
   width: 100px;
   margin-bottom: 5px;
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
   cursor: pointer;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
