--- a/css/notifications.css
+++ b/css/notifications.css
@@ -1,6 +1,7 @@
 /* Notifications */
 
 div#notifications {
+  /* border: 1px solid red; */
   position: absolute;
   top: 20px;
   left: 0px;
@@ -26,7 +27,7 @@ div#notifyGradient {
   );
   background: linear-gradient(
     rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 100%
+    rgba(255, 255, 255, 0) 100%
   );
   filter: alpha(
     Opacity=0,
